<resources>
    <string name="app_name">sarana</string>
    <string name="title_activity_inicia">inicia</string>
    <string name="inicia_title">Inicia</string>
    <string name="inicia_subtitle">Verifica tus datos</string>
    <string name="inicia_name">Nombre: Jorge Ayaviri</string>
    <string name="inicia_email">E-mail: Jorgea@gmail.com</string>
    <string name="inicia_vehicle">Vehículo: Toyota Corola 2011</string>
    <string name="inicia_syndicate">Sindicato: Litoral</string>
    <string name="inicia_plate">Placa: 123TYH</string>
    <string name="inicia_button">Comienza a trabajar</string>

    <string name="registrateTitulo">Regístrate</string>
    <string name="nombreR">Nombre</string>
    <string name="carnet_de_identidadR">Carnet de Identidad</string>
    <string name="e_mailR">E-Mail</string>
    <string name="telefonoR">Teléfono</string>
    <string name="codigo_de_sindicatoR">Código de sindicato</string>
    <string name="placa">Placa</string>
    <string name="nro_de_cuenta">Nro. de cuenta</string>
    <string name="banco">Banco</string>
    <string name="title_activity_verif">Verif</string>

    <string name="verif_title">Verificación\n de datos</string>
    <string name="verif_subtitle">Datos correctos y admitidos</string>
    <string name="verif_button">Inicio</string>
    <string name="title_activity_registrate">Registrate</string>

    <string name="bienvenido_bienvenido">¡Bienvenido, conductor!</string>
    <string name="bienvenido_autito">autito</string>
    <string name="bienvenido_inicio">Inicio</string>
    <string name="bienvenido_registro">Registro</string>
    <string name="title_activity_transaction_success">Transaction_success</string>

    <string name="transaction_success_title">Transacción correcta</string>
    <string name="transaction_fail_title">Transacción incorrecta</string>
    <string name="transaction_success_label">INGRESOS\nDEL DÍA</string>
    <string name="transaction_fail_label">SALDO\nTARJETA</string>
    <string name="dollar">$$$</string>
    <string name="title_activity_transaction_fail">Transaction_fail</string>
    <string name="registrate_enviar">Enviar</string>
    <string name="title_activity_tu_dia">Tu_dia</string>
    <string name="tu_dia_titulo">Tu día</string>
    <string name="tu_dia_usuario">Usuario: Jorge</string>
    <string name="tu_dia_fecha">Fecha: 08/06/2019</string>
    <string name="ingresosDia">INGRESOS DEL DÍA </string>
    <string name="dolar">$$$</string>
    <string name="cerrar_sesion">CERRAR SESIÓN</string>
    <string name="pasa_la_tarjeta_titulo">¡PASA LA TARJETA!</string>
    <string name="pasa_la_tarjeta_espera_texto">      Espera la confirmación</string>
    <string name="tu_dia_ingresos">Ingresos\ndel día</string>
    <string name="tramo_largo">TRAMO\nLARGO</string>
    <string name="tramo_corto">TRAMO\nCORTO</string>
</resources>
