<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inicia"
    tools:showIn="@layout/activity_inicia"
    android:background="@color/background">

    <TextView
        android:id="@+id/inicia_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="120dp"
        android:text="@string/inicia_title"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/inicia_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_subtitle"
        android:layout_marginStart="0dp"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inicia_title"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/inicia_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_name"
        android:layout_marginTop="70dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/inicia_subtitle"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/inicia_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_email"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/inicia_name"
        app:layout_constraintStart_toStartOf="parent"/>
    <View style="@style/Divider"
        android:id="@+id/inicia_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/inicia_email"
        android:layout_marginTop="40dp"
        android:background="#505050"/>
    <TextView
        android:id="@+id/inicia_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_vehicle"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/inicia_divider"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/inicia_syndicate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_syndicate"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/inicia_vehicle"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/inicia_plate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_plate"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/inicia_syndicate"
        app:layout_constraintStart_toStartOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inicia_button"
        android:layout_marginTop="60dp"
        android:background="@color/colorPrimaryDark"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/inicia_plate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5" />

</android.support.constraint.ConstraintLayout>