<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Tu_dia"
    tools:showIn="@layout/activity_tu_dia">

    <TextView
        android:id="@+id/tu_dia_titulo_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/monopoly_inline"
        android:text="@string/tu_dia_titulo"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tu_dia_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:text="@string/tu_dia_fecha"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tu_dia_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tu_dia_usuario"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tu_dia_fecha" />

    <View
        android:id="@+id/tu_dia_divider"
        style="@style/Divider"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:background="#505050"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tu_dia_usuario" />

    <TextView
        android:id="@+id/tu_dia_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:background="@color/button"
        android:padding="5dp"
        android:text="@string/tu_dia_ingresos"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tu_dia_divider" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="20dp"
        android:background="@color/green"
        android:padding="10dp"
        android:text="@string/dollar"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@id/tu_dia_label"
        app:layout_constraintTop_toBottomOf="@id/tu_dia_divider" />

    <TextView
        android:id="@+id/tu_dia_tramo_largo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="40dp"
        android:background="@color/light_green"
        android:onClick="PasaLaTarjeta"
        android:text="@string/tramo_largo"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tu_dia_label" />

    <TextView
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:background="@color/green"
        android:onClick="PasaLaTarjeta"
        android:text="@string/tramo_corto"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tu_dia_tramo_largo" />

    <Button
        android:id="@+id/tu_dia_cerrar_sesion"
        android:layout_width="209dp"
        android:layout_height="34dp"
        android:layout_marginTop="666dp"
        android:layout_marginBottom="17dp"
        android:background="@color/red"
        android:text="@string/cerrar_sesion"
        android:textColor="@color/white"
        android:onClick="Main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.896"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>