<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Verif"
    tools:showIn="@layout/activity_verif"
    android:background="@color/background">

    <TextView
        android:id="@+id/verif_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/verif_title"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/verif_check"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/check_mark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/verif_title" />

    <TextView
        android:id="@+id/verif_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/verif_check"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/verif_subtitle"
        android:textSize="30sp"
        android:padding="40sp"
        android:textAlignment="center"
        app:layout_constraintHorizontal_bias="0.5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:onClick="Inicio"
        app:layout_constraintTop_toBottomOf="@id/verif_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:text="@string/verif_button"/>
</android.support.constraint.ConstraintLayout>