<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Transaction_fail"
    tools:showIn="@layout/activity_transaction_fail"
    android:background="@color/background">

    <TextView
        android:id="@+id/transaction_fail_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/transaction_fail_title"
        android:textAlignment="center"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/transaction_fail_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/cross_transaction"
        android:onClick="Tu_dia_fail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/transaction_fail_title"/>
    <View style="@style/Divider"
        android:id="@+id/transaction_fail_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintTop_toBottomOf="@+id/transaction_fail_image"
        android:layout_marginTop="40dp"
        android:background="#505050"/>

    <TextView
        android:id="@+id/transaction_fail_label"
        android:layout_width="144dp"
        android:layout_height="83dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="28dp"
        android:background="@color/black"
        android:text="@string/transaction_fail_label"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_fail_divider" />

    <TextView
        android:layout_width="92dp"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="96dp"
        android:background="@color/red"
        android:text="@string/dollar"
        android:textColor="#FFFFFF"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_fail_divider" />

</android.support.constraint.ConstraintLayout>